tests/files/lexer_tests/should_fail/023.cmdr
// Illegal character in string (ascii 23)
var = '';